--- a/tweepy-setup.ipynb
+++ b/tweepy-setup.ipynb
@@ -219,266 +219,242 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>author_id</th>\n",
-       "      <th>edit_history_tweet_ids</th>\n",
-       "      <th>text</th>\n",
        "      <th>id</th>\n",
        "      <th>created_at</th>\n",
+       "      <th>author_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>edit_history_tweet_ids</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1584862619642503169]</td>\n",
-       "      <td>Prime Minister Rishi Sunak says he will fix mi...</td>\n",
        "      <td>1584862619642503169</td>\n",
        "      <td>2022-10-25T11:01:08.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>Prime Minister Rishi Sunak says he will fix mi...</td>\n",
+       "      <td>[1584862619642503169]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1584857155605336070]</td>\n",
-       "      <td>See the moment Rishi Sunak meets King Charles ...</td>\n",
        "      <td>1584857155605336070</td>\n",
        "      <td>2022-10-25T10:39:25.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>See the moment Rishi Sunak meets King Charles ...</td>\n",
+       "      <td>[1584857155605336070]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1584838786197987328]</td>\n",
-       "      <td>\"I know brighter days lie ahead\"\\n\\nUK's short...</td>\n",
        "      <td>1584838786197987328</td>\n",
        "      <td>2022-10-25T09:26:26.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>\"I know brighter days lie ahead\"\\n\\nUK's short...</td>\n",
+       "      <td>[1584838786197987328]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1584600252509786124]</td>\n",
-       "      <td>Rishi Sunak to take over as UK prime minister ...</td>\n",
        "      <td>1584600252509786124</td>\n",
        "      <td>2022-10-24T17:38:35.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>Rishi Sunak to take over as UK prime minister ...</td>\n",
+       "      <td>[1584600252509786124]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1584565235125477379]</td>\n",
-       "      <td>\"I pledge that I will serve you with integrity...</td>\n",
        "      <td>1584565235125477379</td>\n",
        "      <td>2022-10-24T15:19:26.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>\"I pledge that I will serve you with integrity...</td>\n",
+       "      <td>[1584565235125477379]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1584563215362654208]</td>\n",
-       "      <td>Rishi Sunak speaks publicly for the first time...</td>\n",
        "      <td>1584563215362654208</td>\n",
        "      <td>2022-10-24T15:11:24.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>Rishi Sunak speaks publicly for the first time...</td>\n",
+       "      <td>[1584563215362654208]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1584533187186794497]</td>\n",
-       "      <td>@BBCNews Sir Graham Brady, chairman of 1922 Co...</td>\n",
        "      <td>1584533187186794497</td>\n",
        "      <td>2022-10-24T13:12:05.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>@BBCNews Sir Graham Brady, chairman of 1922 Co...</td>\n",
+       "      <td>[1584533187186794497]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1584530924506595328]</td>\n",
-       "      <td>Rishi Sunak set to become the UK's first Briti...</td>\n",
        "      <td>1584530924506595328</td>\n",
        "      <td>2022-10-24T13:03:06.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>Rishi Sunak set to become the UK's first Briti...</td>\n",
+       "      <td>[1584530924506595328]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1584275907090714624]</td>\n",
-       "      <td>Boris Johnson drops out of race to be UK Conse...</td>\n",
        "      <td>1584275907090714624</td>\n",
        "      <td>2022-10-23T20:09:45.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>Boris Johnson drops out of race to be UK Conse...</td>\n",
+       "      <td>[1584275907090714624]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1584039298755547137]</td>\n",
-       "      <td>Xi Jinping secures a historic third term, ceme...</td>\n",
        "      <td>1584039298755547137</td>\n",
        "      <td>2022-10-23T04:29:33.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>Xi Jinping secures a historic third term, ceme...</td>\n",
+       "      <td>[1584039298755547137]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1583769709689769984]</td>\n",
-       "      <td>12-year-old boy dies and man pulled from rubbl...</td>\n",
        "      <td>1583769709689769984</td>\n",
        "      <td>2022-10-22T10:38:18.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>12-year-old boy dies and man pulled from rubbl...</td>\n",
+       "      <td>[1583769709689769984]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1583519424166129664]</td>\n",
-       "      <td>Committee investigating former US President Do...</td>\n",
        "      <td>1583519424166129664</td>\n",
        "      <td>2022-10-21T18:03:45.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>Committee investigating former US President Do...</td>\n",
+       "      <td>[1583519424166129664]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1583476271224279040]</td>\n",
-       "      <td>Ex-US President Donald Trump's former top advi...</td>\n",
        "      <td>1583476271224279040</td>\n",
        "      <td>2022-10-21T15:12:17.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>Ex-US President Donald Trump's former top advi...</td>\n",
+       "      <td>[1583476271224279040]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1583404687667040262]</td>\n",
-       "      <td>Labour MP Christian Matheson should be suspend...</td>\n",
        "      <td>1583404687667040262</td>\n",
        "      <td>2022-10-21T10:27:50.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>Labour MP Christian Matheson should be suspend...</td>\n",
+       "      <td>[1583404687667040262]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1583348970675240963]</td>\n",
-       "      <td>UK government borrowing rose last month, and r...</td>\n",
        "      <td>1583348970675240963</td>\n",
        "      <td>2022-10-21T06:46:26.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>UK government borrowing rose last month, and r...</td>\n",
+       "      <td>[1583348970675240963]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1583085792377044993]</td>\n",
-       "      <td>Anne Sacoolas admits causing Harry Dunn's deat...</td>\n",
        "      <td>1583085792377044993</td>\n",
        "      <td>2022-10-20T13:20:39.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>Anne Sacoolas admits causing Harry Dunn's deat...</td>\n",
+       "      <td>[1583085792377044993]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1583076192873168896]</td>\n",
-       "      <td>\"I cannot deliver the mandate on which I was e...</td>\n",
        "      <td>1583076192873168896</td>\n",
        "      <td>2022-10-20T12:42:31.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>\"I cannot deliver the mandate on which I was e...</td>\n",
+       "      <td>[1583076192873168896]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1583075323972763651]</td>\n",
-       "      <td>There will be a leadership election within a w...</td>\n",
        "      <td>1583075323972763651</td>\n",
        "      <td>2022-10-20T12:39:04.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>There will be a leadership election within a w...</td>\n",
+       "      <td>[1583075323972763651]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1583074397765918721]</td>\n",
-       "      <td>Liz Truss to resign as UK prime minister after...</td>\n",
        "      <td>1583074397765918721</td>\n",
        "      <td>2022-10-20T12:35:23.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>Liz Truss to resign as UK prime minister after...</td>\n",
+       "      <td>[1583074397765918721]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1582769682821828609]</td>\n",
-       "      <td>Grant Shapps to be UK home secretary after Sue...</td>\n",
        "      <td>1582769682821828609</td>\n",
        "      <td>2022-10-19T16:24:33.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>Grant Shapps to be UK home secretary after Sue...</td>\n",
+       "      <td>[1582769682821828609]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1582757875297812480]</td>\n",
-       "      <td>Suella Braverman has resigned as UK home secre...</td>\n",
        "      <td>1582757875297812480</td>\n",
        "      <td>2022-10-19T15:37:38.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>Suella Braverman has resigned as UK home secre...</td>\n",
+       "      <td>[1582757875297812480]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>5402612</td>\n",
-       "      <td>[1582730264874303488]</td>\n",
-       "      <td>Hong Kong pro-democracy protester gives his ac...</td>\n",
        "      <td>1582730264874303488</td>\n",
        "      <td>2022-10-19T13:47:55.000Z</td>\n",
+       "      <td>5402612</td>\n",
+       "      <td>Hong Kong pro-democracy protester gives his ac...</td>\n",
+       "      <td>[1582730264874303488]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   author_id edit_history_tweet_ids  \\\n",
-       "0    5402612  [1584862619642503169]   \n",
-       "1    5402612  [1584857155605336070]   \n",
-       "2    5402612  [1584838786197987328]   \n",
-       "3    5402612  [1584600252509786124]   \n",
-       "4    5402612  [1584565235125477379]   \n",
-       "5    5402612  [1584563215362654208]   \n",
-       "6    5402612  [1584533187186794497]   \n",
-       "7    5402612  [1584530924506595328]   \n",
-       "8    5402612  [1584275907090714624]   \n",
-       "9    5402612  [1584039298755547137]   \n",
-       "10   5402612  [1583769709689769984]   \n",
-       "11   5402612  [1583519424166129664]   \n",
-       "12   5402612  [1583476271224279040]   \n",
-       "13   5402612  [1583404687667040262]   \n",
-       "14   5402612  [1583348970675240963]   \n",
-       "15   5402612  [1583085792377044993]   \n",
-       "16   5402612  [1583076192873168896]   \n",
-       "17   5402612  [1583075323972763651]   \n",
-       "18   5402612  [1583074397765918721]   \n",
-       "19   5402612  [1582769682821828609]   \n",
-       "20   5402612  [1582757875297812480]   \n",
-       "21   5402612  [1582730264874303488]   \n",
+       "                     id                created_at author_id  \\\n",
+       "0   1584862619642503169  2022-10-25T11:01:08.000Z   5402612   \n",
+       "1   1584857155605336070  2022-10-25T10:39:25.000Z   5402612   \n",
+       "2   1584838786197987328  2022-10-25T09:26:26.000Z   5402612   \n",
+       "3   1584600252509786124  2022-10-24T17:38:35.000Z   5402612   \n",
+       "4   1584565235125477379  2022-10-24T15:19:26.000Z   5402612   \n",
+       "5   1584563215362654208  2022-10-24T15:11:24.000Z   5402612   \n",
+       "6   1584533187186794497  2022-10-24T13:12:05.000Z   5402612   \n",
+       "7   1584530924506595328  2022-10-24T13:03:06.000Z   5402612   \n",
+       "8   1584275907090714624  2022-10-23T20:09:45.000Z   5402612   \n",
+       "9   1584039298755547137  2022-10-23T04:29:33.000Z   5402612   \n",
+       "10  1583769709689769984  2022-10-22T10:38:18.000Z   5402612   \n",
+       "11  1583519424166129664  2022-10-21T18:03:45.000Z   5402612   \n",
+       "12  1583476271224279040  2022-10-21T15:12:17.000Z   5402612   \n",
+       "13  1583404687667040262  2022-10-21T10:27:50.000Z   5402612   \n",
+       "14  1583348970675240963  2022-10-21T06:46:26.000Z   5402612   \n",
+       "15  1583085792377044993  2022-10-20T13:20:39.000Z   5402612   \n",
+       "16  1583076192873168896  2022-10-20T12:42:31.000Z   5402612   \n",
+       "17  1583075323972763651  2022-10-20T12:39:04.000Z   5402612   \n",
+       "18  1583074397765918721  2022-10-20T12:35:23.000Z   5402612   \n",
+       "19  1582769682821828609  2022-10-19T16:24:33.000Z   5402612   \n",
+       "20  1582757875297812480  2022-10-19T15:37:38.000Z   5402612   \n",
+       "21  1582730264874303488  2022-10-19T13:47:55.000Z   5402612   \n",
        "\n",
-       "                                                 text                   id  \\\n",
-       "0   Prime Minister Rishi Sunak says he will fix mi...  1584862619642503169   \n",
-       "1   See the moment Rishi Sunak meets King Charles ...  1584857155605336070   \n",
-       "2   \"I know brighter days lie ahead\"\\n\\nUK's short...  1584838786197987328   \n",
-       "3   Rishi Sunak to take over as UK prime minister ...  1584600252509786124   \n",
-       "4   \"I pledge that I will serve you with integrity...  1584565235125477379   \n",
-       "5   Rishi Sunak speaks publicly for the first time...  1584563215362654208   \n",
-       "6   @BBCNews Sir Graham Brady, chairman of 1922 Co...  1584533187186794497   \n",
-       "7   Rishi Sunak set to become the UK's first Briti...  1584530924506595328   \n",
-       "8   Boris Johnson drops out of race to be UK Conse...  1584275907090714624   \n",
-       "9   Xi Jinping secures a historic third term, ceme...  1584039298755547137   \n",
-       "10  12-year-old boy dies and man pulled from rubbl...  1583769709689769984   \n",
-       "11  Committee investigating former US President Do...  1583519424166129664   \n",
-       "12  Ex-US President Donald Trump's former top advi...  1583476271224279040   \n",
-       "13  Labour MP Christian Matheson should be suspend...  1583404687667040262   \n",
-       "14  UK government borrowing rose last month, and r...  1583348970675240963   \n",
-       "15  Anne Sacoolas admits causing Harry Dunn's deat...  1583085792377044993   \n",
-       "16  \"I cannot deliver the mandate on which I was e...  1583076192873168896   \n",
-       "17  There will be a leadership election within a w...  1583075323972763651   \n",
-       "18  Liz Truss to resign as UK prime minister after...  1583074397765918721   \n",
-       "19  Grant Shapps to be UK home secretary after Sue...  1582769682821828609   \n",
-       "20  Suella Braverman has resigned as UK home secre...  1582757875297812480   \n",
-       "21  Hong Kong pro-democracy protester gives his ac...  1582730264874303488   \n",
-       "\n",
-       "                  created_at  \n",
-       "0   2022-10-25T11:01:08.000Z  \n",
-       "1   2022-10-25T10:39:25.000Z  \n",
-       "2   2022-10-25T09:26:26.000Z  \n",
-       "3   2022-10-24T17:38:35.000Z  \n",
-       "4   2022-10-24T15:19:26.000Z  \n",
-       "5   2022-10-24T15:11:24.000Z  \n",
-       "6   2022-10-24T13:12:05.000Z  \n",
-       "7   2022-10-24T13:03:06.000Z  \n",
-       "8   2022-10-23T20:09:45.000Z  \n",
-       "9   2022-10-23T04:29:33.000Z  \n",
-       "10  2022-10-22T10:38:18.000Z  \n",
-       "11  2022-10-21T18:03:45.000Z  \n",
-       "12  2022-10-21T15:12:17.000Z  \n",
-       "13  2022-10-21T10:27:50.000Z  \n",
-       "14  2022-10-21T06:46:26.000Z  \n",
-       "15  2022-10-20T13:20:39.000Z  \n",
-       "16  2022-10-20T12:42:31.000Z  \n",
-       "17  2022-10-20T12:39:04.000Z  \n",
-       "18  2022-10-20T12:35:23.000Z  \n",
-       "19  2022-10-19T16:24:33.000Z  \n",
-       "20  2022-10-19T15:37:38.000Z  \n",
-       "21  2022-10-19T13:47:55.000Z  "
+       "                                                 text edit_history_tweet_ids  \n",
+       "0   Prime Minister Rishi Sunak says he will fix mi...  [1584862619642503169]  \n",
+       "1   See the moment Rishi Sunak meets King Charles ...  [1584857155605336070]  \n",
+       "2   \"I know brighter days lie ahead\"\\n\\nUK's short...  [1584838786197987328]  \n",
+       "3   Rishi Sunak to take over as UK prime minister ...  [1584600252509786124]  \n",
+       "4   \"I pledge that I will serve you with integrity...  [1584565235125477379]  \n",
+       "5   Rishi Sunak speaks publicly for the first time...  [1584563215362654208]  \n",
+       "6   @BBCNews Sir Graham Brady, chairman of 1922 Co...  [1584533187186794497]  \n",
+       "7   Rishi Sunak set to become the UK's first Briti...  [1584530924506595328]  \n",
+       "8   Boris Johnson drops out of race to be UK Conse...  [1584275907090714624]  \n",
+       "9   Xi Jinping secures a historic third term, ceme...  [1584039298755547137]  \n",
+       "10  12-year-old boy dies and man pulled from rubbl...  [1583769709689769984]  \n",
+       "11  Committee investigating former US President Do...  [1583519424166129664]  \n",
+       "12  Ex-US President Donald Trump's former top advi...  [1583476271224279040]  \n",
+       "13  Labour MP Christian Matheson should be suspend...  [1583404687667040262]  \n",
+       "14  UK government borrowing rose last month, and r...  [1583348970675240963]  \n",
+       "15  Anne Sacoolas admits causing Harry Dunn's deat...  [1583085792377044993]  \n",
+       "16  \"I cannot deliver the mandate on which I was e...  [1583076192873168896]  \n",
+       "17  There will be a leadership election within a w...  [1583075323972763651]  \n",
+       "18  Liz Truss to resign as UK prime minister after...  [1583074397765918721]  \n",
+       "19  Grant Shapps to be UK home secretary after Sue...  [1582769682821828609]  \n",
+       "20  Suella Braverman has resigned as UK home secre...  [1582757875297812480]  \n",
+       "21  Hong Kong pro-democracy protester gives his ac...  [1582730264874303488]  "
       ]
      },
      "execution_count": 7,
